do some changes in html and readme and created css file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yeah my website</title>
+    <title>Zain Ali</title>
   </head>
   <body>
-    <h1>I purchase domain for free</h1>
+    <h1>My name is Zain Ali</h1>
   </body>
 </html>
